--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/external.css" />
     <link rel="stylesheet" href="./assets/css/light-theme.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <!-- endinject -->
+    <!-- endinject -------->
   </head>
 
   <body>
