Added room list dropdown menu, room list emulator

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,11 @@
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta http-equiv="Access-Control-Allow-Origin" content="*" />
+    <!-- Animate css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+    />
     <!-- inject:css -->
     <link rel="stylesheet" href="./assets/css/external.css" />
     <link rel="stylesheet" href="./assets/css/light-theme.css" />
@@ -111,11 +116,14 @@
         <!-- TV end -->
         <!-- Intercom start -->
         <ch5-triggerview-child>
-          <br />
-          <br />
           <div class="">
             <h1 class="text-center">Intercom</h1>
           </div>
+          <ch5-import-htmlsnippet
+            class="source-page"
+            url="./components/exp-component/exp-component.html"
+          >
+          </ch5-import-htmlsnippet>
         </ch5-triggerview-child>
         <!-- Intercom end -->
 
