Added Intercom page; on Climate page conected AC and room temp with emulator; changed size of room-list dropdown bar

--- a/app/index.html
+++ b/app/index.html
@@ -116,10 +116,11 @@
         <!-- TV end -->
         <!-- Intercom start -->
         <ch5-triggerview-child>
-          <br />
-          <div class="">
-            <h1 class="text-center">Intercom</h1>
-          </div>
+          <ch5-import-htmlsnippet
+            class="source-page"
+            url="./components/intercom-page/intercom-page.html"
+          >
+          </ch5-import-htmlsnippet>
         </ch5-triggerview-child>
         <!-- Intercom end -->
 
