--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,14 @@
 
   <body>
     <div id="loader" class="loader"></div>
+
     <section class="main-section">
       <!-- Header start -->
-      <nav class="navbar navbar-dark navbar-default fixed-top" onclick="">
+      <nav
+        id="main-navbar"
+        class="navbar navbar-dark navbar-default fixed-top"
+        onclick=""
+      >
         <ch5-import-htmlsnippet
           id="room-list-templ"
           url="./components/room-list-templ/room-list-templ.html"
@@ -45,7 +50,12 @@
         receivestateurl="common_background_url"
         url="./assets/img/ch5-stone-light-bg.jpg"
       ></ch5-background>
-      <ch5-triggerview class="triggerview" gestureable="true" endless="false">
+      <ch5-triggerview
+        class="triggerview-main triggerview"
+        gestureable="false"
+        endless="false"
+        disableanimation="true"
+      >
         <!-- Blinds start -->
         <ch5-triggerview-child>
           <ch5-import-htmlsnippet
@@ -81,15 +91,15 @@
           </ch5-import-htmlsnippet>
         </ch5-triggerview-child>
         <!-- Music end -->
-
-        <!-- Schedule start -->
+        <!-- Inactivity Page start -->
         <ch5-triggerview-child>
           <ch5-import-htmlsnippet
-            class="schedule-page"
-            url="./components/schedule-page/schedule-page.html"
+            id="inactivity-page"
+            url="./components/inactivity-page/inactivity-page.html"
           ></ch5-import-htmlsnippet>
         </ch5-triggerview-child>
-        <!-- Schedule end -->
+
+        <!-- Inactivity Page end -->
       </ch5-triggerview>
       <ch5-list
         class="swiper-thumb"
