--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="./assets/css/external.css" />
     <link rel="stylesheet" href="./assets/css/light-theme.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/components.css" />
+
     <!-- endinject -------->
   </head>
 
