--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./assets/css/external.css" />
     <link rel="stylesheet" href="./assets/css/light-theme.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="stylesheet" href="./assets/css/components.css" />
+    <!-- <link rel="stylesheet" href="./assets/css/components.css" /> -->
 
     <!-- endinject -------->
   </head>
